docs: document encoding, lib_dir, add_exports, and FQCN dedup in reindex section
Adds a full config-key reference table and explains each option's purpose,
including add_exports for JPMS-encapsulated packages added in this session.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>